@@ -3,6 +3,7 @@ export SERVICE_LIST="${SERVICE_LIST}${THISSERVICE} "
 
 rcfilecat () {
   CLASS=org.apache.hadoop.hive.cli.RCFileCat
+  HIVE_OPTS =''
   execHiveCmd $CLASS "$@"
 }
 
